<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Back"
        android:src="@android:drawable/ic_media_previous" />

    <EditText
        android:id="@+id/etPatientName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Patient Name"/>

    <EditText
        android:id="@+id/etTestType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Test Type"/>

    <EditText
        android:id="@+id/etTestDate"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="Test Date (YYYY-MM-DD)"/>

    <EditText
        android:id="@+id/etResult"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="Result"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="Add Record"/>
</LinearLayout>
